--- a/SCOP_AppWeb/Views/Shared/_Layout.cshtml
+++ b/SCOP_AppWeb/Views/Shared/_Layout.cshtml
@@ -34,8 +34,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Devoluciones" asp-action="Index">Devoluciones</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Usuarios</a>
+                        </li>
                     </ul>
                     <ul class="navbar-nav" id="MenuSeguridad">
+                        
+                        @* Condicional para verificar si el usuario esta logeado *@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item" style="padding-right:2ex">
