--- a/SCOP_AppWeb/Views/Requisiciones/Index.cshtml
+++ b/SCOP_AppWeb/Views/Requisiciones/Index.cshtml
@@ -14,9 +14,6 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.IdRequisicion)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.IdOrdenProduccion)
             </th>
             <th>
@@ -41,9 +38,6 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.IdRequisicion)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.IdOrdenProduccion)
             </td>
             <td>
@@ -62,9 +56,9 @@
                 @Html.DisplayFor(modelItem => item.EstadoActivo)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                <a asp-action="Edit" asp-route-id="@item.IdRequisicion">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.IdRequisicion">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.IdRequisicion">Delete</a>
             </td>
         </tr>
 }
