--- a/SCOP_AppWeb/Views/Requisiciones/Edit.cshtml
+++ b/SCOP_AppWeb/Views/Requisiciones/Edit.cshtml
@@ -5,9 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<h1>Editar requisición</h1>
 
-<h4>Requisiciones</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -51,15 +50,14 @@
                 </label>
             </div>
 
-
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar cambios" class="btn btn-success" />
+                <a asp-action="Index" class="btn btn-secondary ml-2">Volver a la lista</a>
             </div>
+
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
