--- a/SCOP_AppWeb/Views/Requisiciones/Index.cshtml
+++ b/SCOP_AppWeb/Views/Requisiciones/Index.cshtml
@@ -12,6 +12,7 @@
 
 <p>
     <a asp-action="Create" class="btn btn-success">Crear Nuevo</a>
+    <a asp-action="Buscar" class="btn btn-primary">Buscar Requisiciones</a>
 </p>
 <table class="table">
     <thead>
