--- a/SCOP_AppWeb/Views/Requisiciones/Buscar.cshtml
+++ b/SCOP_AppWeb/Views/Requisiciones/Buscar.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<SCOP_AppWeb.Models.Requisiciones>
+
 @{
     ViewData["Title"] = "Buscar Requisiciones";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -29,25 +30,30 @@
 
     @if (ViewBag.CostoTotal != null)
     {
+        <h3>Costo total de la orden de producción</h3>
         <table class="table">
             <thead>
                 <tr>
                     <th>ID de Orden de Producción</th>
+                    <th>Nombre de Usuario de Orden de Producción</th>
+                    <th>Descripción de Orden de Producción</th>
                     <th>Total de Costos</th>
+
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>@Model.First().IdOrdenProduccion</td>
+                    <td>@ViewBag.NombreUsuarioOrdenProduccion</td>
+                    <td>@ViewBag.DescripcionOrdenProduccion</td>
                     <td>@ViewBag.CostoTotal</td>
                 </tr>
             </tbody>
         </table>
+        <h3>Desglose de la orden de producción</h3>
     }
-
-
-    else
-    {
+    <!-- table detalles-->
+       
         <table class="table">
             <thead>
                 <tr>
@@ -102,7 +108,7 @@
                 }
             </tbody>
         </table>
-    }
+    
 }
 
 @if (TempData["Mensaje"] != null)
@@ -110,7 +116,8 @@
     <div class="alert alert-info" role="alert">
         @TempData["Mensaje"]
     </div>
-}
+}   
+
 
 <div class="form-group mt-2">
     <a asp-action="Index" class="btn btn-secondary ml-2">Volver a la lista</a>
