--- a/SCOP_AppWeb/Views/Requisiciones/Create.cshtml
+++ b/SCOP_AppWeb/Views/Requisiciones/Create.cshtml
@@ -12,14 +12,30 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="form-group">
                 <label asp-for="IdOrdenProduccion" class="control-label"></label>
-                <input asp-for="IdOrdenProduccion" class="form-control" />
+                <select asp-for="IdOrdenProduccion" class="form-control">
+                    @if (ViewBag.OrdenesProduccion != null)
+                    {
+                        foreach (var ordenProduccion in ViewBag.OrdenesProduccion)
+                        {
+                            <option value="@ordenProduccion.IdOrdenProduccion">@ordenProduccion.Descripcion</option>
+                        }
+                    }
+                </select>
                 <span asp-validation-for="IdOrdenProduccion" class="text-danger"></span>
             </div>
+
+
             <div class="form-group">
                 <label asp-for="IdUsuario" class="control-label"></label>
-                <input asp-for="IdUsuario" class="form-control" />
+                <select asp-for="IdUsuario" class="form-control">
+                    @foreach (var usuario in ViewBag.Usuarios)
+                    {
+                        <option value="@usuario.idUsuario">@usuario.nombreUsuario</option>
+                    }
+                </select>
                 <span asp-validation-for="IdUsuario" class="text-danger"></span>
             </div>
 
@@ -38,14 +54,12 @@
                 <input asp-for="CostoRequisicion" class="form-control" />
                 <span asp-validation-for="CostoRequisicion" class="text-danger"></span>
             </div>
+
             <div class="form-group mt-2">
                 <input type="submit" value="Añadir" class="btn btn-success" />
                 <a asp-action="Index" class="btn btn-secondary ml-2">Volver a la lista</a>
             </div>
-
         </form>
     </div>
 </div>
-
-
 
