Editar Orden de produccion

--- a/SCOP_AppWeb/Views/OrdenProduccion/Index.cshtml
+++ b/SCOP_AppWeb/Views/OrdenProduccion/Index.cshtml
@@ -62,7 +62,7 @@
                 @Html.DisplayFor(modelItem => item.EstadoActivo)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Edit", "Edit", new { id=item.IdOrdenProduccion  }) |
                 @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("Delete", "Delete", new {  id=item.IdOrdenProduccion })
             </td>
