--- a/SCOP_AppWeb/Views/Requisiciones/Create.cshtml
+++ b/SCOP_AppWeb/Views/Requisiciones/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SCOP_AppWeb.Models.Requisiciones
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Añadir Requisición";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
