--- a/SCOP_AppWeb/Views/Devoluciones/Create.cshtml
+++ b/SCOP_AppWeb/Views/Devoluciones/Create.cshtml
@@ -1,26 +1,20 @@
 ﻿@model SCOP_AppWeb.Models.Devoluciones
 
 @{
-    ViewData["Title"] = "RegistrarDevoluciones";
+    ViewData["Title"] = "Solicitar Devolución";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Registrar Devoluciones</h1>
+
+<h4>Solicitar devolución</h4>
 
 <hr />
 <div class="row">
     <div class="col-md-4">
-        @if (TempData["Mensaje"] != null)
-        {
-            <div class="alert alert-info alert-dismissible fade show" role="alert">
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
-                <strong>@TempData["Mensaje"]</strong>
-            </div>
-        }
-        <form asp-action="RegistrarDevoluciones">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="IdOrdenProduccion" class="control-label"></label>               
+                <label asp-for="IdOrdenProduccion" class="control-label"></label>
                 <input asp-for="IdOrdenProduccion" class="form-control" />
                 <span asp-validation-for="IdOrdenProduccion" class="text-danger"></span>
             </div>                      
@@ -28,15 +22,21 @@
                 <label asp-for="ImporteDevolucion" class="control-label"></label>
                 <input asp-for="ImporteDevolucion" class="form-control" />
                 <span asp-validation-for="ImporteDevolucion" class="text-danger"></span>
-            </div>           
+            </div>          
+            @if (TempData["Mensaje"] != null)
+            {
+                <div class="alert alert-danger mt-2" role="alert">
+                    <h3>@TempData["Mensaje"]</h3>
+                </div>
+            }
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Enviar" class="btn btn-success mt-2" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-primary mt-2">Volver a la lista</a>
 </div>
 
